third_party/blink/web_tests/external/wpt/mediasession/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS MediaSession interface: existence and properties of interface object
PASS MediaSession interface object length
PASS MediaSession interface object name
PASS MediaSession interface: existence and properties of interface prototype object
PASS MediaSession interface: existence and properties of interface prototype object's "constructor" property
PASS MediaSession interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaSession interface: attribute metadata
PASS MediaSession interface: attribute playbackState
PASS MediaSession interface: operation setActionHandler(MediaSessionAction, MediaSessionActionHandler)
FAIL MediaSession interface: operation setPositionState(MediaPositionState) assert_equals: property has wrong .length expected 0 but got 1
PASS MediaMetadata interface: existence and properties of interface object
PASS MediaMetadata interface object length
PASS MediaMetadata interface object name
PASS MediaMetadata interface: existence and properties of interface prototype object
PASS MediaMetadata interface: existence and properties of interface prototype object's "constructor" property
PASS MediaMetadata interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaMetadata interface: attribute title
PASS MediaMetadata interface: attribute artist
PASS MediaMetadata interface: attribute album
PASS MediaMetadata interface: attribute artwork
Harness: the test ran to completion.

